; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_30139.c_print_last_error.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_30139.c_print_last_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FORMAT_MESSAGE_ALLOCATE_BUFFER = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Error code: %ld\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"Error message: %s\00", align 1
@.str.2 = private unnamed_addr constant [46 x i8] c"Unable to format error message for code %ld.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_last_error() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i8* (...) @GetLastError()
  store i8* %3, i8** %2, align 8
  %4 = load i32, i32* @FORMAT_MESSAGE_ALLOCATE_BUFFER, align 4
  %5 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %6 = or i32 %4, %5
  %7 = load i8*, i8** %2, align 8
  %8 = bitcast i8** %1 to i8*
  %9 = call i64 @FormatMessage(i32 %6, i32* null, i8* %7, i32 0, i8* %8, i32 0, i32* null)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %0
  %12 = load i32, i32* @stderr, align 4
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %13)
  %15 = load i32, i32* @stderr, align 4
  %16 = load i8*, i8** %1, align 8
  %17 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  %18 = load i8*, i8** %1, align 8
  %19 = call i32 @LocalFree(i8* %18)
  br label %24

20:                                               ; preds = %0
  %21 = load i32, i32* @stderr, align 4
  %22 = load i8*, i8** %2, align 8
  %23 = call i32 @fprintf(i32 %21, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0), i8* %22)
  br label %24

24:                                               ; preds = %20, %11
  ret void
}

declare dso_local i8* @GetLastError(...) #1

declare dso_local i64 @FormatMessage(i32, i32*, i8*, i32, i8*, i32, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @LocalFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
